[package]
name = "rpc_example_rs"
version = "0.1.0"
authors = ["amrltqt <amirault.quentin@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = { version = "1.0.61" }
log = { version = "0.4" }
env_logger = { version = "0.8.2" }
uuid = { version = "0.4", features = ["v4"] }

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"